--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
-#Ignore everything in root except for wp-content
-/*
-!wp-content/
-!.gitignore
-!.github/
+# #Ignore everything in root except for wp-content
+# /*
+# !wp-content/
+# !.gitignore
+# !.github/
 
-# ignore everything in the "wp-content" directory, except the themes and plugin directories
-wp-content/*
-!wp-content/themes/
-!wp-content/plugins/
+# # ignore everything in the "wp-content" directory, except the themes and plugin directories
+# wp-content/*
+# !wp-content/themes/
+# !wp-content/plugins/
 
-#ignore all plugins
-wp-content/plugins/*
-!wp-content/plugins/facta-blocks
+# #ignore all plugins
+# wp-content/plugins/*
+# !wp-content/plugins/facta-blocks
 
-# ignore all themes except for desired themes
-wp-content/themes/*
-!wp-content/themes/Element2021
+# # ignore all themes except for desired themes
+# wp-content/themes/*
+# !wp-content/themes/Element2021
 
-# ignore node dependency directories
-node_modules/
-dist/
+# # ignore node dependency directories
+# node_modules/
+# dist/
